<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nasa Daily Image</string>
    <string name="action_settings">Settings</string>
    <string name="test_image_title">Martian Dunes Flying in Formation</string>
    <string name="test_image_date">Wed, 19 Feb 2014 12:00:00 EDT</string>
    <string name="test_image_description">Migratory birds and military aircraft often fly in a V shaped formation. The V formation greatly boosts the efficiency and range of flying birds, because all except the first fly in the upward motion of air called upwash from the wingtip vortices of the bird ahead.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="test_content_description">Nasa image of the day</string>

    <color name="background">#000000</color>
    <color name="text">#FFFFFF</color>

    <string name="refresh_button">Refresh</string>
    <string name="set_wallpaper_button">Set Wallpaper</string>
    <string name="title_activity_nasa_app">NasaApp</string>
    <string name="title_activity_ed_news">EdNews</string>
    <string name="share_button">Compartir</string>
    <string name="feed_button">feed_button</string>

</resources>
